2008-06-12  Dafydd Crosby <dcrosby@userful.com>
	* Removed Lexmark, Xerox, and Tektronix PPD's due to
	licensing concerns.
	* printer/IBM-Infoprint_1226tn: fixed typo
	* driver/Postscript: added 3 Samsung stubs

2008-06-05  Till Kamppeter <till.kamppeter@gmail.com>

	* driver/gutenprint.spec, driver/gutenprint52.spec: Changed masks
	  for downloadable driver packages to also support Debian
	  packages.

2008-05-28  Till Kamppeter <till.kamppeter@gmail.com>

	* driver/pxlmono.xml, driver/Postscript.xml: Removed added '<?xml
	  version="1.0" ?>' from the "Postscript" and "pxlmono" driver
	  entries. They broke database queries.

2008-05-25  Dafydd Crosby <dcrosby@userful.com>
	* PPD's added:
	Xerox DocuPrint N17
	Xerox DocuPrint N32
	Xerox Phaser 8860
	* Added XML for printers:
	Panasonic DP-180
	Panasonic DP-2330
	Panasonic DP-4510
	Panasonic DP-4520
	Panasonic DP-8016P
	Panasonic DP-8020E
	Panasonic DP-8045
	Panasonic DP-8060
	Panasonic DP-C213
	Panasonic DP-C262
	Panasonic DP-C264
	Panasonic DP-C265
	Panasonic DP-C305
	Panasonic DP-C322
	Panasonic DP-C354
	Panasonic DP-C405
	Xerox DocuPrint N24
	Xerox DocuPrint N40
	Xerox DocuPrint N2125PS
	Xerox DocuPrint N3225PS
	Xerox DocuPrint N4025PS
	Xerox DocuPrint N4525PS
	Xerox Phaser 4400B
	Xerox Phaser 4400DT
	Xerox Phaser 4400N
	Xerox Phaser 4500B
	Xerox Phaser 4500DT
	Xerox Phaser 4500DX
	Xerox Phaser 4500N
	Xerox Phaser 4510B
	Xerox Phaser 4510DT
	Xerox Phaser 4510DX
	Xerox Phaser 4510N
	Xerox Phaser 5500B
	Xerox Phaser 5500DN
	Xerox Phaser 5500DT
	Xerox Phaser 5500DX
	Xerox Phaser 5500N
	Xerox Phaser 6100
	Xerox Phaser 6120PS
	Xerox Phaser 6130N
	Xerox Phaser 6180DN
	Xerox Phaser 6180MFP-D
	Xerox Phaser 6200B
	Xerox Phaser 6200DP
	Xerox Phaser 6200DX
	Xerox Phaser 6200N
	Xerox Phaser 6250B
	Xerox Phaser 6250DP
	Xerox Phaser 6250DT
	Xerox Phaser 6250DX
	Xerox Phaser 6250N
	Xerox Phaser 6300DN
	Xerox Phaser 6300N
	Xerox Phaser 6350DP
	Xerox Phaser 6350DT
	Xerox Phaser 6350DX
	Xerox Phaser 6360DN
	Xerox Phaser 6360DX