@@ -9,12 +9,12 @@
   <en>
    
    Principally, this driver is free software under the GPL, but take
-   note on the following restriction:&lt;p&gt;
+   note on the following restriction:
 
    For some of the printers which this driver supports (Currently
    Samsung CLP-200, CLP-300, CLP-600, CLX-216x, CLX-2170, CLX-3160,
    Xerox Phaser 6110), it uses a JBIG software module for data
-   compression.&lt;p&gt;
+   compression.
 
    It is possible that certain products which can be built using the
    JBIG software module might form inventions protected by patent
@@ -23,14 +23,14 @@
    software by the original author and OpenPrinting does NOT include
    any licences for any patents. In those countries where a patent
    licence is required for certain applications of this software
-   module, you will have to obtain such a licence yourself.&lt;p&gt;
+   module, you will have to obtain such a licence yourself.
 
    The driver can be built without the JBIG module, but then it will
-   not support the above-mentioned printer models any more.&lt;p&gt;
+   not support the above-mentioned printer models any more.
 
    Only versions 1.1.x and newer are affected. The older versions
    1.0.x do not use the JBIG software for all supported
-   printers.&lt;p&gt;
+   printers.
 
   </en>
  </licensetext>
