@@ -1,3 +1,8 @@
+2008-06-18  Till Kamppeter <till.kamppeter@gmail.com>
+
+	* driver/splix.html: Modified license text to be in plain text
+	  format and not in HTML.
+	
 2008-06-12  Dafydd Crosby <dcrosby@userful.com>
 	* Removed Lexmark, Xerox, and Tektronix PPD's due to
 	licensing concerns.
